# portfolio-website

./: .coverage  .flake8  .pre-commit-config  .pylintrc  Dockerfile  Makefile  Procfile  README.md  app.py  index.py  pyproject.toml  requirements.txt
apps/: pages_front.py  style.py
apps/en/: callbacks.py  components.py  layout.py
apps/en/layouts/: contact.py  education.py  home.py  projects.py  publications.py  skills.py  social_media.py  work_experience.py
apps/pt/: callbacks.py  components.py  layout.py
apps/pt/layouts/: contact.py  education.py  home.py  projects.py  publications.py  skills.py  social_media.py  work_experience.py
data/: contact.txt  education.txt  social.txt  summary.txt  workExperience.txt
data/en/: education.txt  projects.txt  publications.txt  summary.txt  workExperience.txt
data/pt/: education.txt  projects.txt  publications.txt  summary.txt  workExperience.txt
logs/: logger.py
pages/: callbacks.py  components.py  layout.py
