[tool.poetry]
# TODO: update this infos
name = "Derick-Portfolio-Website"
version = "0.1.0"
description = ""
authors = ["Derick A. Montagna"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dash = {extras = ["diskcache"], version = "^2.2.0"}
dash-bootstrap-components = "^1.0.0"
gunicorn = "^20.0.4"
pytest-mock = "^3.7.0"
diskcache = "^5.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
black = "^22.3.0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.black]
line-length = 100

[tool.coverage.run]
omit = [
    "backend/callbacks.py",
    "backend/components.py",
    "backend/layout.py",
    "logs/logger.py",
]
